# zeicold_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action_status.py  bot_action.py  main.py  pyproject.toml  zeicold_bot.py
actions/: __init__.py
assets/icons/: README.md
ci/: build.sh
examples/hentai_mover/: README.md  build.sh  build_exe.sh  hentai_mover.py  pyproject.toml
zeicold_bot/: i_name_and_description.py  zeicold_bot.py
zeicold_bot/actions/: move_hentai_action.py
