[project]
name = "zeicold-bot"
version = "0.1.0"
description = "System Tray Bot by FreeSimpleGUIQt"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "attrs>=25.4.0",
    "freesimpleguiqt>=2.0.0",
    "loguru>=0.7.3",
    "pdoc>=16.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]

[tool.black]
line-length = 200

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.uv.workspace]
members = [
    "examples/hentai_mover",
]
